added swagger data
